sistema é todo o mesmo, adicionado correção ortográfica

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										<img src="images/delage.png" class="ramon_foto">
 									</p>
 									<h3>Delage Sistemas</h3>
-									<p>Possuo habilidade em Banco de dados SQL, onde fui suporte Segundo nível na empresa Delage Sistemas em juiz de fora. Obtive em várias situações habilidade para manter a calma e analisar a melhor solução para um determinado problema.						
+									<p>Possuo habilidade em Banco de dados SQL, onde fui suporte Segundo nível na empresa Delage Sistemas em juiz de fora. Obtive, em várias situações, habilidade para manter a calma e analisar a melhor solução para um determinado problema.						
 									</p>
 								</section>
 								<section>
