Alteração em nome do primeiro menu / que legal você aqui!

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav>
 						<ul>
 							<li><img  class="ramon_foto" src="images/1.jpg"></li>
-							<li><a href="#intro"></a>Ei! Que legal você aqui!</li>
+							<li><a href="#intro"></a>Que legal você aqui!</li>
 							<li><a href="#one">Vamos falar de Objetivos profissionais?</a></li>
 							<li><a href="#two">Analise minhas habilidades :)</a></li>
 							<li><a href="#skill_bar">Veja minha auto-avaliação</a></li>
